$Id$

2006-10-01 Roy Hills <Roy.Hills@nta-monitor.com>

	* ike-scan.c: Show backoff patterns even if there was only a
	  single response.  Some implementations, e.g. linksys, don't
	  retry at all, and this change allows these to be matched as
	  well.

2006-09-23 Anonymous <l...e@gmail.com>

	* psk-crack.c: Added code to allow cracking Nortel Contivity
	  pre-shared keys, which use a variation of Mamro's method.  Thanks
	  to an anonymous benefactor.

2006-08-30 Roy Hills <Roy.Hills@nta-monitor.com>

	* ike-backoff-patterns: Added new PIX backoff pattern, with details
	  of the PIX versions for both patterns.

2006-08-22 Roy Hills <Roy.Hills@nta-monitor.com>

	* udp.h: Removed unneeded BSD-flavour declarations and unneeded macros.
	  Changed types from u_int{8,16,32}_t to uint{8,16,32}_t.  Added
	  definition of struct pseudo_hdr (moved from ike-scan.c).
	  Changed names of pseudo_hdr struct members to avoid problem due
	  to s_addr being defined as a macro on some systems (e.g. Solaris).

	* ip.h: Changed types from u_int{8,16,32}_t to uint{8,16,32}_t.
	  Removed unneeded macros.

	* utils.c: Change random_ip() so that it generates the same sequence
	  on both little-endian and big-endian systems.

	* ike-scan.c: --randsrc option now works on Solaris 9 and FreeBSD 5.3
	  as well as Linux.

2006-08-14 Roy Hills <Roy.Hills@nta-monitor.com>

	* ike-scan.c, isakmp.c: Changed random number implementation to use
	  the mersenne twister functions from mt19937ar.c rather than the
	  standard rand() from the C library.

	  This improves the quality of the random numbers, as some C library
	  rand() functions are quite bad.  More importantly, it makes the
	  random number generation process repeatable across different
	  platforms.

	* mt19937ar.c: New file - Mersenne Twister random number generator.

	* utils.c: New functions random_byte() and random_ip(), which use
	  the mersenne twister random number functions.
