@@ -66,6 +66,10 @@ Display verbose progress messages.
 Set dictionary file to <f>.  The default is
 /usr/local/share/ike-scan/psk-crack-dictionary.
 .TP
+.B --username=<u> or -u <u>
+Set username to <u>. Use this option only for cracking Nortel Contivity
+password hashes.
+.TP
 .B --bruteforce=<n> or -B <n>
 Select bruteforce cracking up to <n> characters.
 .TP
